--- a/src/main/resources/templates/portal.html
+++ b/src/main/resources/templates/portal.html
@@ -46,11 +46,10 @@
 		<a th:href="@{/login/facebook}" 	><img th:src="@{/img/facebook.png}" 	/></a> <br />
 		<a th:href="@{/login/github}" 	><img th:src="@{/img/github.png}" 	/></a>
 	</div>
-	<div class="container logosdiv" ng-show="home.authenticated">
+	<div class="container info" ng-show="home.authenticated">
 		Logged in as: <span ng-bind="home.user"> </span>
 		<div th:if="${email != null}">
-			<span>Email:
-				<div th:text="${email}"></div>
+			<span th:text="'Email: '+${email}">
 			</span>
 		</div>
 		<div>
